--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Abdullah-Muhammed-Anecdote/Stellar-Utils#readme",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "qs": "^6.12.0"
   }
 }
