--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Abdullah-Muhammed-Anecdote/Stellar-Utils#readme",
   "dependencies": {
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "qs": "^6.12.0"
   }
 }
